k8s/networking/cilium/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
spec:
  hostnames:
    - hubble.mfin.app
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-internal
      namespace: envoy-gateway
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Service
          name: hubble-ui
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
